@@ -1,3 +1,8 @@
+1999-11-12  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>
+
+	* product.el: Some `checkdoc' fixes.
+	(product-version>=): Eliminate local variable.
+	
 1999-11-12  Keiichi Suzuki  <keiichi@nanap.org>
 
 	* product.el: New file.
